fixtures/frontend/milestone-2/invalid/nested-gate-predicate/main.aivi
signal flags : Signal Bool = True

signal filtered : Signal Bool = flags
 ?|> (True ?|> . T|> True F|> False)
